ai-services/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      enableServiceLinks: false
      containers:
        - name: n8n
          # renovate: datasource=docker depname=n8nio/n8n versioning=loose
          image: n8nio/n8n:latest
          ports:
            - name: http
              containerPort: 5678
          volumeMounts:
            - name: storage
              mountPath: /home/node/.n8n
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: n8n-nfs-pvc
