ai-services/n8n/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
spec:
  parentRefs:
    - group: gateway.networking.k8s.io	
      kind: Gateway
      name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - "n8n.crobasaurusrex.ryanbeales.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 5678
